# FXGrayDither

./: .gitignore  README.md
Assignment1/: Readme.md
Assignment1/src/: ColorPixelDTO.java  Controller.java  DitheringProcessor.java  ImageHolder.java  ImageProcessor.java  InplaceDitherProcessor.java  InputImageLoader.java  Main.java  MainWindowLayout.fxml  SimpleDitherProcessor.java
Assignment2/: readme.md
Assignment2/images/: flowchart.html
Assignment2/src/: FrequencyModulator.java  Main.java  Melody.java  MelodyReader.java  NoteDTO.java  NotesFrequenciesMapping.java  SingleSoundDTO.java  Song.java  SongReader.java  WavFileProcessor.java  WavFileSynthensizer.java  WavFileSynthesizer.java
Assignment2/test/: MahoutsukaiNoYume_AnnoDomini.txt
Assignment3/: CMakeLists.txt  MotionSearch.cpp  MotionSearch.h  MotionSearchTools.cpp  MotionSearchTools.h  MotionVectorDTO.h  PGMImage.cpp  PGMImage.h  README.md  SequentialMotionSearch.cpp  SequentialMotionSearch.h  TwoDimensionalLogarithmMotionSearch.cpp  TwoDimensionalLogarithmMotionSearch.h  main.cpp
Assignment3/images/: i1.pgm  i2.pgm  i2p-2d.pgm  i2p-seq.pgm
src/: Controller.java  DitheringProcessor.java  GrayLevelProcessor.java  ImageHolder.java  InplaceDitherProcessor.java  InputImageLoader.java  Main.java  MainWindowLayout.fxml  SimpleDitherProcessor.java
